cluster/apps/irq-balance/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: irq-balance
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
